tests/baselines/reference/interfacesWithPredefinedTypesAsNames.errors.txt
==== tests/cases/compiler/interfacesWithPredefinedTypesAsNames.ts (10 errors) ====
    interface any { }
              ~~~
!!! interfacesWithPredefinedTypesAsNames.ts(1,11): error TS2000: Duplicate identifier 'any'.
              ~~~
!!! interfacesWithPredefinedTypesAsNames.ts(1,11): error TS2242: Interface name cannot be 'any'.
    interface number { }
              ~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(2,11): error TS2000: Duplicate identifier 'number'.
              ~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(2,11): error TS2242: Interface name cannot be 'number'.
    interface string { }
              ~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(3,11): error TS2000: Duplicate identifier 'string'.
              ~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(3,11): error TS2242: Interface name cannot be 'string'.
    interface boolean { }
              ~~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(4,11): error TS2000: Duplicate identifier 'boolean'.
              ~~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(4,11): error TS2242: Interface name cannot be 'boolean'.
    interface void {}
              ~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(5,11): error TS1005: ';' expected.
    ~~~~~~~~~
!!! interfacesWithPredefinedTypesAsNames.ts(5,1): error TS2095: Cannot find name 'interface'.